yoshimi 1.3.x

2015-5-30 Will
- Bugfix! Only part 1 was responding to gui instument selection.

2015-5-29 Will
- Fixed regression that stopped mixer panel updating on MIDI program change.
- Moved max part control from parameters menu to alongside part number.
- Refactored part gui calls to improve updates.
- Implemented colour based engine IDs in mixer panel window
- 'Clear All Parameters' now resets NRPNs and vector control.

2015-5-27 Will
- Trial for colour based engine IDs in main window.
- Fixed bug that caused banks to be initialied twice on startup.
- Hid (redundant) refesh button from instrument banks window.
  Will remove it completely if no problems show up.

2015-5-23 Will
- Small improvement to synth ID discovery.
- Prompts at foot of window.
- Removed old style new bank creation.

2015-5-21 Will
- Implemented identification of all three synth engines.
- Made workaround for corrupted instrument headers.

2015-5-15 Will
- Implemented max part & part group control.

2015-5-13 Andrew
- On-demand jack ports registering (only if part is enabled)

2015-5-12 Will
- fixed asString bug that still appeared on some architectures.
  Thanks to Stephen Parry for identifying the cause.

2015-5-7 Will
- Improved bank root and extended program change CC setting method.
- Corrected NRPN gui display issues
- Updated Docs

2015-5-6 Will
- Implemented Zyn-compatible NRPNs with extension for effect type and destination
  part number change.  (some gui improvements needed)
- Updated Docs.

2015-5-2 Will
- Improved NRPN handling of 14bit NRPNs and 'full' NRPNs with reversed
  data byte order.

2015-4-30 Will
- Fixed regression in distortion level.
- Added voice number to AddSynth oscillator editor.
- Implemented NRPN data increment and decrement.

2015-4-27 Will
- Fixed bug that stopped some rotary controls responding to mouse wheel.
- Re-orderd part effects window to more closely match system & insert.
- Made 'panic' stop fade at a fixed rate so it is now click free even for