@@ -1,6 +1,11 @@
 yoshimi 1.3.x
 
 2015-5-30 Will
+- Vector control volume 'swap' now uses an inverse square law to keep the
+  overall level fairly constant.
+- More improvements to instrument engine colours.
+
+2015-5-30 Will
 - Bugfix! Only part 1 was responding to gui instument selection.
 
 2015-5-29 Will
